<resources>
    <!-- UI related -->
    <string name="app_name" translatable="false">YAWA - Yet Another Weather Application</string>
    <string name="no_connection_message">Oops, looks like there\'s no internet connection</string>
    <string name="get_current_weather_fail_message">Failure to retrieve current weather information</string>
    <string name="get_forecast_fail_message">Failure to retrieve weather forecast</string>
    <string name="icon_fetch_failed_message">Failed to fetch weather icon</string>

    <!-- Main Activity -->
    <string name="text_field_default">Enter the city name</string>
    <string name="today_button_default">Today</string>
    <string name="_5_day_button_default">5 day</string>
    <string name="go">Go</string>
    <string name="credits">Credits</string>
    <string name="settings">Settings</string>
    <string name="local">Get weather for current position</string>
    <string name="pos_not_found">Could not find position provider!</string>
    <string name="permission_not_granted">Cannot track device position without user permission!</string>
    <string name="no_last_pos">Could not found last Position!</string>
    <string name="provide_text">Please provide a city name!</string>


    <!-- API related -->
    <string name="api_key" translatable="false">appid=64ebb6f1a2a7abf9c9a91fedf34426dd</string>
    <string name="api_base_uri" translatable="false">http://api.openweathermap.org/data/2.5/</string>
    <string name="api_weather_endpoint" translatable="false">weather</string>
    <string name="api_forecast_endpoint" translatable="false">forecast</string>
    <string name="api_daily_forecast_endpoint" translatable="false">forecast/daily</string>
    <string name="api_image_endpoint" translatable="false">http://openweathermap.org/img/w/</string>
    <string name="api_lang">lang=en</string>

    <!-- Weather detail activity -->
    <string name="weather_detail_temp">Temperature: </string>
    <string name="weather_detail_pressure">Pressure: %d</string>
    <string name="weather_detail_humidity">Humidity: %d</string>
    <string name="weather_detail_unit" translatable="false">ºC</string>

    <!-- Forecast Activity -->
    <string name="weather_forecast_description">Description: </string>
    <string name="weather_forecast_today">Today</string>
    <string name="weather_forecast_tomorrow">Tomorrow</string>
    <string name="weather_forecast_in_2_days">In 2 days</string>
    <string name="weather_forecast_in_3_days">In 3 days</string>
    <string name="weather_forecast_in_4_days">In 4 days</string>

    <!-- Settings Activity -->
    <string name="UserPreferences" translatable="false">userprefs</string>
    <string name="time_notify_minute" translatable="false">minute_notify</string>
    <string name="time_notify_hour" translatable="false">hour_notify</string>
    <string name="period_refresh" translatable="false">period_refresh</string>
    <string name="favourite_city" translatable="false">favourite_city</string>
    <string name="cities_to_Follow" translatable="false">cities</string>
    <string name="connection_type" translatable="false">connection_type</string>
    <string name="type_of_connection">Type of connection</string>
    <string name="type_of_connection_desc">Set the type of connection to update data</string>
    <string name="update_frequency">Update Frequency</string>
    <string name="update_frequency_desc">Set Update Frequency</string>
    <string name="add_cities">Add Cities and Set Notification</string>
    <string name="add_cities_to_follow">Add cities to follow</string>
    <string name="add_cities_to_follow_desc">Add all cities to be updated, favorite city and the time for the notification</string>
    <string name="add_new_city">Add New City</string>
    <string name="clear">Clear List</string>
    <string name="save">SAVE</string>
    <string name="notifications_on">Notifications ON</string>
    <string name="notifications_off">Notifications OFF</string>
    <string name="favourite_city_txt">Favorite City:</string>
    <string name="set_favourite">Set Favourite</string>
    <string name="settings_popup_confirm">Do you want to remove entry?</string>
    <string name="settings_popup_title">Remove entry</string>



    <!-- Credits Activty -->
    <string name="api_link" translatable="false">http://openweathermap.org</string>
    <string name="powered_by">Powered By</string>
    <string name="github_href" translatable="false">https://github.com/</string>
    <string name="luis" translatable="false">Luis Moreira</string>
    <string name="pedro" translatable="false">Pedro Arnauth</string>
    <string name="joao" translatable="false">João Correia</string>
    <string name="luis_github" translatable="false">Manchs12</string>
    <string name="pedro_github" translatable="false">PedroATavares</string>
    <string name="joao_github" translatable="false">Dude29</string>


</resources>
