<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="false"
    android:clipToPadding="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cityTextForecast"
                android:layout_weight="1"
                android:textColorHighlight="@android:color/holo_orange_dark"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal|italic"
                android:gravity="center" />

            <TextView
                android:text="@string/weather_forecast_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/today"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/todaydesc"
                android:layout_weight="1" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:id="@+id/todayicon"
                android:layout_weight="1"
                />

            <TextView
                android:text="@string/weather_forecast_tomorrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tomorrow"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tomorrowdesc"
                android:layout_weight="1" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:id="@+id/tomorrowicon"
                android:layout_weight="1"
                />

            <TextView
                android:text="@string/weather_forecast_in_2_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/intwodays"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/twodaysdesc"
                android:layout_weight="1" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:id="@+id/twodaysicon"
                android:layout_weight="1"
                />

            <TextView
                android:text="@string/weather_forecast_in_3_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inthreedays"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/threedaysdesc"
                android:layout_weight="1" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:id="@+id/threedaysicon"
                android:layout_weight="1"
                />

            <TextView
                android:text="@string/weather_forecast_in_4_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/infourdays"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fourdaysdesc"
                android:layout_weight="1" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:id="@+id/fourdaysicon"
                android:layout_weight="1"
                />

        </LinearLayout>
</ScrollView>

